--- a/v1/front-react-js/jsconfig.json
+++ b/v1/front-react-js/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "./jsconfig.paths.json",
   "compilerOptions": {
-    "moduleResolution": "Node",
+    "module": "commonjs",
+    "target": "es6"
   },
   "include": [
     "src"
