--- a/v1/front-react-ts/package.json
+++ b/v1/front-react-ts/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "set PORT=8080 && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
